# Pararena2

./: MODERNIZATION.md  README.md  fable-is-awesome.md
.github/workflows/: build.yml  release.yml
media-sources/: controls.acorn
port/: .gitignore  CMakeLists.txt  INPUT_NOTES.md  PORTING_NOTES.md  README.md
port/android/: .gitignore  README.md  build.gradle  fetch-deps.sh  settings.gradle
port/android/app/: build.gradle  proguard-rules.pro
port/android/app/jni/: CMakeLists.txt
port/android/app/src/main/: AndroidManifest.xml
port/android/app/src/main/res/values/: strings.xml
port/assets/icon/: pararena.icns
port/macos/: Info.plist
port/shim/: AppleEvents.h  AppleTalk.h  Folders.h  GestaltEqu.h  MacShim.h  Palettes.h  Script.h  SetUpA4.h  Sound.h  shim_input.c  shim_internal.h  shim_os.c  shim_qd.c  shim_res.c  shim_sound.c  shim_text.c
port/src/: app_icon.h  controller_img.h  mobile_controls.h  pause_screen_img.h  pause_screen_mobile_img.h  pause_screen_mobile_onscreen_img.h  port_four.c  port_init.c  port_main.c  port_panels.c  port_prefs.c  port_shell.c  port_steal.c  port_stubs.c  port_univ.c  port_video.c
port/tools/: build_assets.py  convert_sources.py
port/win/: pararena.rc
scripts/: build.sh  release.sh
